--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -218,7 +218,7 @@ footer {
 }
 
 .overview .ui.statistics .statistic > .value, .overview .ui.statistics .statistic > .label {
-  color: white !important;
+  color: white;
 }
 
 .ui.comments {
